@@ -1,3 +1,12 @@
+2008-02-29  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Call close_fs
+	instead of close to avoid calling close from wrong class when changing
+	a file system based device node.
+	(fhandler_disk_file::fchown): Ditto.
+	(fhandler_disk_file::facl): Ditto.
+	(fhandler_base::utimes_fs): Ditto.
+
 2008-02-28  Corinna Vinschen  <corinna@vinschen.de>
 
 	* exceptions.cc (_cygtls::handle_exceptions): When being debugged,
